<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_12"
    android:elevation="@dimen/elevation_none"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="@dimen/radius_large"
    app:cardElevation="@dimen/elevation_none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_glossy_index_card" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/component_card_highlight_height"
            android:alpha="0.45"
            android:background="@drawable/bg_glossy_top_shine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/component_card_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/spacing_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/storage_installed_packages"
                    android:textColor="@color/color_text_secondary"
                    android:textSize="@dimen/text_body" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_installed_packages_value"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/text_body"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/spacing_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/storage_used"
                    android:textColor="@color/color_text_secondary"
                    android:textSize="@dimen/text_body" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_used_value"
                    android:textColor="@color/color_accent_soft"
                    android:textSize="@dimen/text_body"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/spacing_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/storage_free"
                    android:textColor="@color/color_text_secondary"
                    android:textSize="@dimen/text_body" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_free_value"
                    android:textColor="@color/color_success"
                    android:textSize="@dimen/text_body"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.cardview.widget.CardView>
