<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/spacing_24"
    android:paddingEnd="@dimen/spacing_24">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/text_screen_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/dashboard_preparing_private_ai"
        android:textColor="@color/color_text_soft"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <TextView
        android:id="@+id/privateAiDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:lineSpacingExtra="@dimen/spacing_4"
        android:text="@string/dashboard_private_ai_description"
        android:textColor="@color/color_text_muted"
        android:textSize="@dimen/text_body"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText" />

    <TextView
        android:id="@+id/headerIndexedTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:gravity="start|center_vertical"
        android:text="@string/indexed_items_zero"
        android:textColor="@color/color_text_secondary"
        android:textSize="@dimen/text_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privateAiDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
