<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/component_search_height"
    android:visibility="gone"
    app:cardBackgroundColor="@color/color_surface"
    app:cardCornerRadius="@dimen/dashboard_card_radius"
    app:cardElevation="@dimen/elevation_card"
    app:strokeColor="@color/color_border_subtle"
    app:strokeWidth="@dimen/border_width">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingStart="@dimen/spacing_16"
            android:singleLine="true"
            android:textColor="@color/color_text_primary"
            android:textColorHint="@color/color_text_hint"
            android:textSize="@dimen/text_body"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/clearSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/clearSearch"
            android:layout_width="@dimen/component_icon_button_size"
            android:layout_height="@dimen/component_icon_button_size"
            android:layout_marginEnd="@dimen/spacing_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/clear_search"
            android:padding="@dimen/spacing_8"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_text_secondary" />

        <ImageView
            android:id="@+id/searchButton"
            android:layout_width="@dimen/component_icon_button_size"
            android:layout_height="@dimen/component_icon_button_size"
            android:layout_marginEnd="@dimen/spacing_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/search"
            android:padding="@dimen/spacing_8"
            android:src="@drawable/ic_search"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_text_primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
